# slackapp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.qt4  filedownloader.cpp  filedownloader.h  form.ui  main.cpp  resources.qrc  slackapp.cpp  slackapp.h
